add stow to ublue

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,1 +1,22 @@
-/nix/store/qv0qrk17c5vmqd1na1dq6rprvnp5z0vc-home-manager-files/.config/hypr/hypridle.conf
+general {
+  after_sleep_cmd=/nix/store/24g9r7lbzz4i2j8yf8my7wa7mpqya22i-hyprland-0.49.0+date=2025-05-08_9958d29/bin/hyprctl dispatch dpms on
+  before_sleep_cmd=/nix/store/fvqpapz1aipazwj203islpaxkvwqv6yw-hyprlock-0.8.2+date=2025-05-03_6c64630/bin/hyprlock
+  lock_cmd=/nix/store/fvqpapz1aipazwj203islpaxkvwqv6yw-hyprlock-0.8.2+date=2025-05-03_6c64630/bin/hyprlock
+}
+
+listener {
+  on-resume=/nix/store/24g9r7lbzz4i2j8yf8my7wa7mpqya22i-hyprland-0.49.0+date=2025-05-08_9958d29/bin/hyprctl dispatch dpms on
+  on-timeout=/nix/store/24g9r7lbzz4i2j8yf8my7wa7mpqya22i-hyprland-0.49.0+date=2025-05-08_9958d29/bin/hyprctl dispatch dpms off
+  timeout=400
+}
+
+listener {
+  on-timeout=/nix/store/fvqpapz1aipazwj203islpaxkvwqv6yw-hyprlock-0.8.2+date=2025-05-03_6c64630/bin/hyprlock
+  timeout=300
+}
+
+listener {
+  on-resume=/nix/store/24g9r7lbzz4i2j8yf8my7wa7mpqya22i-hyprland-0.49.0+date=2025-05-08_9958d29/bin/hyprctl dispatch dpms on
+  on-timeout=/nix/store/24g9r7lbzz4i2j8yf8my7wa7mpqya22i-hyprland-0.49.0+date=2025-05-08_9958d29/bin/hyprctl dispatch dpms off && /nix/store/if9z6wmzmb07j63c02mvfkhn1mw1w5p4-systemd-257.5/bin/systemctl suspend
+  timeout=600
+}
