--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,1 +1,18 @@
-/nix/store/qv0qrk17c5vmqd1na1dq6rprvnp5z0vc-home-manager-files/.config/hypr/hyprpaper.conf
+# preload = /home/brian/.config/hypr/nix-purple.png
+#preload = /home/brian/.config/hypr/flower.png
+#preload = /home/brian/.config/hypr/shaded_landscape.png
+#preload = /home/brian/.config/hypr/leaves.png
+# preload = /home/brian/.config/hypr/matrix.png
+#preload = /home/brian/.config/hypr/mountain-lake.png
+#preload = /home/brian/.config/hypr/fantasy-world.png
+#preload = /home/brian/.config/hypr/leaves.png
+preload = /home/brian/.config/hypr/retropc.jpg
+preload = /home/brian/.config/hypr/bluewaves.png
+#if more than one preload is desired then continue to preload other backgrounds
+#preload = /path/to/next_image.png
+# .. more preloads
+
+#set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
+wallpaper = ,/home/brian/.config/hypr/retropc.jpg
+ipc = off #on
+splash = false
