--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,1 +1,96 @@
-/nix/store/qv0qrk17c5vmqd1na1dq6rprvnp5z0vc-home-manager-files/.config/tmux/tmux.conf
+
+set  -g default-terminal "screen"
+set  -g base-index      1
+setw -g pane-base-index 1
+
+
+
+
+
+set -g status-keys emacs
+set -g mode-keys   emacs
+
+
+
+
+
+
+
+set  -g mouse             off
+set  -g focus-events      off
+setw -g aggressive-resize off
+setw -g clock-mode-style  12
+set  -s escape-time       500
+set  -g history-limit     2000
+
+# ============================================= #
+# Load plugins with Home Manager                #
+# --------------------------------------------- #
+
+# tmuxplugin-sensible
+# ---------------------
+
+run-shell /nix/store/xccgacyzkbnnf33k016lhsarfb9kpqxp-tmuxplugin-sensible-unstable-2022-08-14/share/tmux-plugins/sensible/sensible.tmux
+
+
+# tmuxplugin-resurrect
+# ---------------------
+set -g @resurrect-strategy-nvim 'session'
+resurrect_dir="$HOME/.tmux/resurrect"
+set -g @resurrect-dir $resurrect_dir
+
+run-shell /nix/store/j5x6jsrz09199bvvms6m9yxgiqzxaflr-tmuxplugin-resurrect-unstable-2022-05-01/share/tmux-plugins/resurrect/resurrect.tmux
+
+
+# tmuxplugin-continuum
+# ---------------------
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '1' # minutes
+
+run-shell /nix/store/yg74d4xk64jyairfi1lvwl90xw21ni2l-tmuxplugin-continuum-unstable-2022-01-25/share/tmux-plugins/continuum/continuum.tmux
+
+
+# tmuxplugin-onedark-theme
+# ---------------------
+
+run-shell /nix/store/8gnykid6rw2kaw245flpcz2j5k2hqmwj-tmuxplugin-onedark-theme-unstable-2020-06-07/share/tmux-plugins/onedark-theme/tmux-onedark-theme.tmux
+
+
+# tmuxplugin-tmux-fzf
+# ---------------------
+
+run-shell /nix/store/wh41xfg5lg0gxd8rfp9844x4xy033bdv-tmuxplugin-tmux-fzf-unstable-2023-10-24/share/tmux-plugins/tmux-fzf/main.tmux
+
+# ============================================= #
+
+ # Fix Colors
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
+set -g prefix C-a
+unbind-key t
+
+#Session
+bind-key -T prefix s switch-client -T session
+bind-key -T session s display-popup -E "tms switch"
+bind-key -T session p display-popup -E "tms"
+bind-key -T session r command-prompt -p "Rename active session to: " "run-shell 'tms rename %1'"
+bind-key -T session n command-prompt -p "New Session:" "new-session -A -s '%%'"
+bind-key -T session x confirm "run-shell 'tms kill'"
+
+#Window
+bind-key -T prefix w switch-client -T window
+bind-key -T window n new-window
+bind-key -T window r command-prompt -I "#W" { rename-window "%%" } 
+
+#PANE
+bind-key -T prefix p switch-client -T pane
+bind-key -T pane h split-window -h
+bind-key -T pane v split-window -v
+
+set -g base-index 1
+setw -g pane-base-index 1
+
+set -g mouse on
+
+set -g status-position bottom
+
