--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,1 +1,233 @@
-/nix/store/qv0qrk17c5vmqd1na1dq6rprvnp5z0vc-home-manager-files/.config/waybar/config
+[
+  {
+    "backlight": {
+      "format": "{icon}",
+      "format-icons": [
+        ""
+      ],
+      "tooltip-format": "{icon}  {percent}%"
+    },
+    "battery": {
+      "format": "{icon}",
+      "format-charging": "󰂄",
+      "format-icons": [
+        "",
+        "",
+        "",
+        "",
+        ""
+      ],
+      "format-plugged": " ",
+      "states": {
+        "critical": 15,
+        "good": 95,
+        "warning": 30
+      },
+      "tooltip-format": "{capacity}%, {time}"
+    },
+    "battery#bat2": {
+      "bat": "BAT2"
+    },
+    "bluetooth": {
+      "format": "󰂯",
+      "format-connected": "󰂱",
+      "format-disabled": "󰂲",
+      "justify": "center",
+      "on-click": "GTK_THEME=Adwaita-dark blueman-manager",
+      "tooltip-format": "Devices connected: {num_connections}"
+    },
+    "clock": {
+      "format": "{:%a %I:%M %p} ",
+      "interval": 60,
+      "tooltip-format": "<big>{:%a %b %d}</big>\n<tt><small>{calendar}</small></tt>"
+    },
+    "cpu": {
+      "format": "  {usage}%"
+    },
+    "custom/clipboard": {
+      "format": "{icon}",
+      "format-icons": {
+        "default": "󰨸"
+      },
+      "on-click": "$HOME/.config/rofi/scripts/clipboard.sh",
+      "on-click-right": "cliphist wipe"
+    },
+    "custom/launcher": {
+      "format": "{icon}",
+      "format-icons": [
+        ""
+      ],
+      "icon-size": 22,
+      "on-click": "$HOME/.config/rofi/scripts/launcher.sh"
+    },
+    "custom/media": {
+      "format": "{icon} {}",
+      "format-icons": {
+        "default": "🎜",
+        "spotify": ""
+      },
+      "max-length": 40,
+      "return-type": "json"
+    },
+    "custom/notification": {
+      "escape": true,
+      "exec": "swaync-client -swb",
+      "exec-if": "which swaync-client",
+      "format": " {icon} ",
+      "format-icons": {
+        "dnd-none": "",
+        "dnd-notification": "",
+        "none": "",
+        "notification": ""
+      },
+      "on-click": "swaync-client -t -sw",
+      "on-click-right": "swaync-client -d -sw",
+      "return-type": "json",
+      "tooltip": true
+    },
+    "custom/recorder": {
+      "escape": true,
+      "exec": "$HOME/.config/waybar/scripts/recorder.sh",
+      "format": "{}",
+      "interval": 5,
+      "on-click": "wf-recorder -f $(xdg-user-dir VIDEOS)/$(date +'recording_%Y-%m-%d-%H%M%S.mp4')",
+      "on-click-right": "pkill --signal SIGINT wf-recorder",
+      "return-type": "json",
+      "signal": 12
+    },
+    "custom/sep": {
+      "format": "|"
+    },
+    "custom/session": {
+      "format": "{icon}",
+      "format-icons": {
+        "default": "󰐥 "
+      },
+      "on-click": "killall wlogout || wlogout -b 5 -m 500",
+      "toolip": false
+    },
+    "custom/space": {
+      "format": " "
+    },
+    "gtk-layer-shell": true,
+    "hyprland/window": {
+      "format": "{title}",
+      "max-length": 50,
+      "separate-outputs": true
+    },
+    "hyprland/workspaces": {
+      "active-only": false,
+      "all-outputs": false,
+      "format": "{icon}",
+      "format-icons": {
+        "1": "1",
+        "10": "10",
+        "2": "2",
+        "3": "3",
+        "4": "4",
+        "5": "5",
+        "6": "6",
+        "7": "7",
+        "8": "8",
+        "9": "9"
+      },
+      "on-click": "activate",
+      "persistent-workspaces": {
+        "*": 2
+      },
+      "sort-by-number": true
+    },
+    "layer": "top",
+    "margin-bottom": 5,
+    "margin-left": 0,
+    "margin-right": 0,
+    "margin-top": 0,
+    "memory": {
+      "format": "  {}%"
+    },
+    "modules-center": [
+      "hyprland/window"
+    ],
+    "modules-left": [
+      "hyprland/workspaces"
+    ],
+    "modules-right": [
+      "custom/clipboard",
+      "bluetooth",
+      "network",
+      "pulseaudio#sink",
+      "pulseaudio#source",
+      "battery",
+      "clock"
+    ],
+    "network": {
+      "family": "ipv4",
+      "format": "{icon}",
+      "format-disconnected": "󰖪",
+      "format-ethernet": "",
+      "format-icons": [
+        "󰤯",
+        "󰤟",
+        "󰤢",
+        "󰤥",
+        "󰤨"
+      ],
+      "format-wifi": "{icon}",
+      "interval": 3,
+      "nospacing": 1,
+      "on-click": "$HOME/.config/rofi/scripts/networkmanager.sh",
+      "on-click-right": "nm-connection-editor",
+      "tooltip-format-disconnected": "Disconnected",
+      "tooltip-format-ethernet": "{ipaddr} ⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
+      "tooltip-format-wifi": "{essid} {ipaddr} ({frequency} GHz)\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}"
+    },
+    "pulseaudio#sink": {
+      "format": "{icon}",
+      "format-bluetooth": "{icon}",
+      "format-bluetooth-muted": "",
+      "format-icons": {
+        "car": "",
+        "default": [
+          "",
+          "",
+          ""
+        ],
+        "hands-free": "",
+        "headphone": "",
+        "headset": "",
+        "phone": "",
+        "portable": ""
+      },
+      "format-muted": "",
+      "format-source": "{volume}% ",
+      "on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle",
+      "on-click-right": "pavucontrol",
+      "tooltip-format": "{desc}\n{volume}%"
+    },
+    "pulseaudio#source": {
+      "format": "{format_source}",
+      "format-source": "",
+      "format-source-muted": "",
+      "on-click": "wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle",
+      "on-click-right": "pavucontrol",
+      "on-scroll-down": "wpctl set-volume @DEFAULT_AUDIO_SOURCE@ 5%-",
+      "on-scroll-up": "wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SOURCE@ 5%+",
+      "scroll-step": 5
+    },
+    "spacing": 0,
+    "temperature": {
+      "format": " HEEH {temperatureC}°C"
+    },
+    "tray": {
+      "icon-size": 16,
+      "spacing": 15
+    },
+    "wlr/taskbar": {
+      "format": "{icon}",
+      "icon-size": 14,
+      "on-click": "activate",
+      "on-click-middle": "close",
+      "tooltip-format": "{title}"
+    }
+  }
+]
