--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,1 +1,203 @@
-/nix/store/qv0qrk17c5vmqd1na1dq6rprvnp5z0vc-home-manager-files/.config/hypr/hyprland.conf
+$mainMod=SUPER_L
+animations {
+  bezier=myBezier, 0.05, 0.9, 0.1, 1.05
+  animation=windows, 1, 7, myBezier
+  animation=windowsOut, 1, 7, default, popin 80%
+  animation=border, 1, 10, default
+  animation=borderangle, 1, 8, default
+  animation=fade, 1, 7, default
+  animation=workspaces, 0, 7, default, fade
+  animation=windowsMove, 1, 6, default
+  enabled=true
+}
+
+decoration {
+  blur {
+    enabled=true
+    ignore_opacity=true
+    new_optimizations=true
+    passes=4
+    size=12
+    xray=true
+  }
+
+  shadow {
+    color=0x66000000
+    enabled=true
+    range=30
+    render_power=3
+  }
+  active_opacity=1.000000
+  inactive_opacity=1.000000
+  rounding=10
+}
+
+dwindle {
+  preserve_split=true
+  pseudotile=true
+}
+
+general {
+  $bg0=0xff1f2329
+  $bg1=0xff282c34
+  $bg2=0xff30363f
+  $bg3=0xff323641
+  $bgDark=0xff1E2127
+  $bg_blue=0xff61afef
+  $bg_d=0xff181b20
+  $bg_yellow=0xffe8c88c
+  $black=0xff0e1013
+  $blue=0xff4fa6ed
+  $cyan=0xff48b0bd
+  $dark_cyan=0xff266269
+  $dark_purple=0xff7e3992
+  $dark_red=0xff8b3434
+  $dark_yellow=0xff835d1a
+  $diff_add=0xff272e23
+  $diff_change=0xff172a3a
+  $diff_delete=0xff2d2223
+  $diff_text=0xff274964
+  $fg=0xffa0a8b7
+  $fg_dark=0xffabb2bf
+  $green=0xff8ebd6b
+  $grey=0xff535965
+  $light_grey=0xff7a818e
+  $orange=0xffcc9057
+  $purple=0xffbf68d9
+  $red=0xffe55561
+  $yellow=0xffe2b86b
+  border_size=2
+  col.active_border=$blue
+  col.inactive_border=$bg1
+  gaps_in=3
+  gaps_out=4
+  layout=dwindle
+}
+
+gestures {
+  workspace_swipe=true
+}
+
+input {
+  touchpad {
+    natural_scroll=true
+  }
+  follow_mouse=1
+  kb_layout=us
+  kb_options=ctrl:nocaps
+  mouse_refocus=false
+  sensitivity=0
+}
+
+master {
+}
+
+misc {
+  disable_hyprland_logo=true
+}
+
+xwayland {
+  force_zero_scaling=true
+}
+bind=$mainMod, RETURN, exec, uwsm app -- ghostty
+bind=$mainMod, Q, killactive,
+bind=$mainMod, E, exec,  uwsm app -- thunar
+bind=$mainMod, G, togglefloating,
+bind=$mainMod, D, exec, uwsm app -- $HOME/.config/rofi/scripts/launcher.sh
+bind=$mainMod CTRL_L, W, exec, uwsm app -- $HOME/.config/rofi/scripts/window.sh
+bind=,XF86PowerOff,  exec,  uwsm app -- $HOME/.config/wlogout/scripts/wlogout.sh
+bind=$mainMod CTRL_L SHIFT, P, exec, uwsm app -- $HOME/.config/wlogout/scripts/wlogout.sh
+bind=$mainMod CTRL_L SHIFT, C, exec,  uwsm app -- $HOME/.config/rofi/scripts/clipboard.sh
+bind=$mainMod CTRL_L SHIFT, I, exec,  uwsm app -- grim -g "$(slurp)"
+bind=,Print, exec,  uwsm app -- grim -g "$(slurp)"
+bind=$mainMod CTRL_L SHIFT, N, exec,  uwsm app -- dunstctl close
+bind=$mainMod SHIFT, W, exec,  uwsm app -- pkill waybar && waybar
+bind=$mainMod, left, movefocus, l
+bind=$mainMod, right, movefocus, r
+bind=$mainMod, up, movefocus, u
+bind=$mainMod, down, movefocus, d
+bind=$mainMod SHIFT, left, swapwindow, l
+bind=$mainMod SHIFT, right, swapwindow, r
+bind=$mainMod SHIFT, up, swapwindow, u
+bind=$mainMod SHIFT, down, swapwindow, d
+bind=$mainMod, J, togglesplit, 
+bind=$mainMod CTRL_L, left, resizeactive, -10 0
+bind=$mainMod CTRL_L, right, resizeactive, 10 0
+bind=$mainMod CTRL_L, down, resizeactive, 0 -10
+bind=$mainMod CTRL_L, up, resizeactive, 0 10
+bind=$mainMod, mouse_down, workspace, e+1
+bind=$mainMod, mouse_up, workspace, e-1
+bind=$mainMod CTRL_L ALT_L SHIFT, L, exec, curl -X GET "https://home.semrad.net/api/webhook/-WaJcaS6CZ1F-V-0exl8Nuhmq"
+bind=$mainMod SHIFT CTRL_L, M, exec,  uwsm app -- wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bind=$mainMod SHIFT CTRL_L, S, exec,  uwsm app -- wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind=$mainMod, Tab, focuscurrentorlast,
+bind=$mainMod,F,fullscreen
+bind=$mainMod, 0, workspace, 10
+bind=$mainMod SHIFT, 0, movetoworkspace, 10
+bind=$mainMod, 1, workspace, 1
+bind=$mainMod SHIFT, 1, movetoworkspace, 1
+bind=$mainMod, 2, workspace, 2
+bind=$mainMod SHIFT, 2, movetoworkspace, 2
+bind=$mainMod, 3, workspace, 3
+bind=$mainMod SHIFT, 3, movetoworkspace, 3
+bind=$mainMod, 4, workspace, 4
+bind=$mainMod SHIFT, 4, movetoworkspace, 4
+bind=$mainMod, 5, workspace, 5
+bind=$mainMod SHIFT, 5, movetoworkspace, 5
+bind=$mainMod, 6, workspace, 6
+bind=$mainMod SHIFT, 6, movetoworkspace, 6
+bind=$mainMod, 7, workspace, 7
+bind=$mainMod SHIFT, 7, movetoworkspace, 7
+bind=$mainMod, 8, workspace, 8
+bind=$mainMod SHIFT, 8, movetoworkspace, 8
+bind=$mainMod, 9, workspace, 9
+bind=$mainMod SHIFT, 9, movetoworkspace, 9
+binde=, XF86AudioMute, exec,  uwsm app -- wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && dunstify -i ~/.config/dunst/assets/$(pamixer --get-mute | grep -q "true" && echo "volume-mute.png" || echo "volume.png") -t 500 -r 2593 "Toggle Mute"
+binde=, XF86MonBrightnessUp, exec,  uwsm app -- brightnessctl s 5%+ && dunstify -h int:value:"$(( ($(cat /sys/class/backlight/*/brightness) * 100) / $(cat /sys/class/backlight/*/max_brightness) ))"  -i ~/.config/dunst/assets/brightness.svg -t 500 -r 2593 "Brightness: $(( ($(cat /sys/class/backlight/*/brightness) * 100) / $(cat /sys/class/backlight/*/max_brightness) ))%"
+binde=, XF86MonBrightnessDown, exec,  uwsm app -- brightnessctl s 5%- && dunstify -h int:value:"$(( ($(cat /sys/class/backlight/*/brightness) * 100) / $(cat /sys/class/backlight/*/max_brightness) ))"  -i ~/.config/dunst/assets/brightness.svg -t 500 -r 2593 "Brightness: $(( ($(cat /sys/class/backlight/*/brightness) * 100) / $(cat /sys/class/backlight/*/max_brightness) ))%"
+binde=, XF86AudioRaiseVolume, exec,  uwsm app -- wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+ && dunstify -h int:value:"$(pamixer --get-volume)" -i ~/.config/dunst/assets/volume.png -t 500 -r 2593 "Volume: $(pamixer --get-volume) %"
+bindl=, XF86AudioLowerVolume, exec,  uwsm app -- wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && dunstify -h int:value:"$(pamixer --get-volume)" -i ~/.config/dunst/assets/volume.png -t 500 -r 2593 "Volume: $(pamixer --get-volume) %"
+bindm=$mainMod, mouse:272, movewindow
+bindm=$mainMod CTRL_L, mouse:272, resizewindow
+env=GDK_BACKEND,wayland
+env=GTK_THEME,Adwaita:dark
+env=XCURSOR_SIZE,22
+env=HYPRCURSOR_SIZE,22
+env=HYPRCURSOR_THEME,Bibata-Modern-Classic
+env=QT_QPA_PLATFORM,wayland
+env=QT_QPA_PLATFORMTHEME,qt6ct
+env=NIXOS_OZONE_WL,1
+env=GDK_DPI_SCALE,1.0
+exec-once=systemctl --user enable --now waybar.service
+exec-once=systemctl --user enable --now hyprpaper.service
+exec-once=systemctl --user enable --now hyprpolkitagent.service
+exec-once=systemctl --user enable --now hypridle.service
+exec-once=uwsm app -- wl-paste --type text --watch cliphist -max-items 25 store
+exec-once=uwsm app -- wl-paste --type image --watch cliphist -max-items 25 store
+monitor=eDP-1,preferred,auto,1.333333,vrr,1
+monitor=,preferred,auto,1.0
+windowrulev2=workspace 1,class:(firefox)
+windowrulev2=workspace 3,class:(Proton Mail)
+windowrulev2=workspace 2,class:(discord)
+windowrulev2=workspace 2,class:(signal)
+windowrulev2=workspace 4,class:(Alacritty)
+windowrulev2=workspace 4,class:(kitty)
+windowrulev2=workspace 4,class:(com.mitchellh.ghostty)
+windowrulev2=workspace 5,class:(jetbrains-idea)
+windowrulev2=workspace 5,class:(Code)
+windowrulev2=workspace 5,class:(code-url-handler)
+windowrulev2=workspace 6,class:(steam)
+windowrulev2=workspace 9,class:(Cider)
+windowrulev2=workspace 10,class:(BambuStudio)
+windowrulev2=opacity 1.0 override 1.0 override,class:^(firefox)$
+windowrulev2=opacity 1.0 override 1.0 override,class:^(Alacritty)$
+windowrulev2=opacity 1.0 override 1.0 override,class:^(kitty)$
+windowrulev2=opacity 1.0 override 1.0 override,class:^(com.mitchellh.ghostty)$
+windowrulev2=opacity 1.0 override 1.0 override,class:^(jetbrains-idea)$
+windowrulev2=opacity 1.0 override 1.0 override,class:^(Code)$
+windowrulev2=opacity 1.0 override 1.0 override,class:^(code-url-handler)$
+windowrulev2=opacity 1.0 override 1.0 override,class:^(Cider)$
+windowrulev2=opacity 1.0 override 1.0 override,class:^(dev.zed.Zed)$
+windowrulev2=float,class:^(blueman-manager)$
+windowrulev2=float,class:^(nm-connection-editor)$
+windowrulev2=float,class:^(pavucontrol)$
