--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,1 +1,50 @@
-/nix/store/qv0qrk17c5vmqd1na1dq6rprvnp5z0vc-home-manager-files/.config/hypr/hyprlock.conf
+background {
+  path=/home/brian/.config/hypr/retropc.jpg
+}
+
+general {
+  disable_loading_bar=true
+  enable_fingerprint=true
+  grace=0
+  immediate_render=true
+  no_fade_in=false
+}
+
+input-field {
+  size=250,60
+  check_color=rgba(204,144,87, 1.0)
+  dots_center=true
+  dots_size=0.200000
+  dots_spacing=0.200000
+  fade_on_empty=false
+  fail_color=rgba(229,85,97, 1.0)
+  font=JetBrainsMono Nerd Font
+  font_color=rgba(171,178,191, 1.0)
+  halign=center
+  hide_input=false
+  inner_color=rgba(30,33,39, 1.0)
+  outer_color=rgba(191,104,217, 1.0)
+  outline_thickness=2
+  placeholder_text=<i><span foreground="##abb2bf">Input Password...</span></i>
+  valign=center
+}
+
+label {
+  color=rgba(171, 178, 191, 1)
+  font=JetBrainsMono Nerd Font
+  font_size=64
+  halign=left
+  position=40, 10
+  text=cmd[update:1000] echo "$(/nix/store/87fck6hm17chxjq7badb11mq036zbyv9-coreutils-9.7/bin/date +'%I:%M %P')"
+  valign=bottom
+}
+
+label {
+  color=rgba(171, 178, 191, 1)
+  font=JetBrainsMono Nerd Font
+  font_size=24
+  halign=left
+  position=40, 150
+  text=cmd[update:43200000] echo "$(/nix/store/87fck6hm17chxjq7badb11mq036zbyv9-coreutils-9.7/bin/date +'%A, %B %d')"
+  valign=bottom
+}
