--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ general {
   $bg_blue=0xff61afef
   $bg_d=0xff181b20
   $bg_yellow=0xffe8c88c
-  $black=0xff0e1013
+  $black=0xff0e1013a
   $blue=0xff4fa6ed
   $cyan=0xff48b0bd
   $dark_cyan=0xff266269
@@ -174,7 +174,7 @@ exec-once=systemctl --user enable --now hyprpolkitagent.service
 exec-once=systemctl --user enable --now hypridle.service
 exec-once=uwsm app -- wl-paste --type text --watch cliphist -max-items 25 store
 exec-once=uwsm app -- wl-paste --type image --watch cliphist -max-items 25 store
-monitor=eDP-1,preferred,auto,1.333333,vrr,1
+monitor=DP-3,preferred,auto,1.333333
 monitor=,preferred,auto,1.0
 windowrulev2=workspace 1,class:(firefox)
 windowrulev2=workspace 3,class:(Proton Mail)
