--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -30,36 +30,39 @@ set  -g history-limit     2000
 # tmuxplugin-sensible
 # ---------------------
 
-run-shell /nix/store/xccgacyzkbnnf33k016lhsarfb9kpqxp-tmuxplugin-sensible-unstable-2022-08-14/share/tmux-plugins/sensible/sensible.tmux
-
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # tmuxplugin-resurrect
 # ---------------------
+
+set -g @plugin 'tmux-plugins/tmux-resurect'
+
 set -g @resurrect-strategy-nvim 'session'
 resurrect_dir="$HOME/.tmux/resurrect"
 set -g @resurrect-dir $resurrect_dir
 
-run-shell /nix/store/j5x6jsrz09199bvvms6m9yxgiqzxaflr-tmuxplugin-resurrect-unstable-2022-05-01/share/tmux-plugins/resurrect/resurrect.tmux
 
 
 # tmuxplugin-continuum
 # ---------------------
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '1' # minutes
-
-run-shell /nix/store/yg74d4xk64jyairfi1lvwl90xw21ni2l-tmuxplugin-continuum-unstable-2022-01-25/share/tmux-plugins/continuum/continuum.tmux
 
 
 # tmuxplugin-onedark-theme
 # ---------------------
 
-run-shell /nix/store/8gnykid6rw2kaw245flpcz2j5k2hqmwj-tmuxplugin-onedark-theme-unstable-2020-06-07/share/tmux-plugins/onedark-theme/tmux-onedark-theme.tmux
+set -g @plugin 'bjsemrad/tmux-onedark-theme'
+#run-shell /nix/store/8gnykid6rw2kaw245flpcz2j5k2hqmwj-tmuxplugin-onedark-theme-unstable-2020-06-07/share/tmux-plugins/onedark-theme/tmux-onedark-theme.tmux
 
 
 # tmuxplugin-tmux-fzf
 # ---------------------
 
-run-shell /nix/store/wh41xfg5lg0gxd8rfp9844x4xy033bdv-tmuxplugin-tmux-fzf-unstable-2023-10-24/share/tmux-plugins/tmux-fzf/main.tmux
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # ============================================= #
 
@@ -93,4 +96,4 @@ setw -g pane-base-index 1
 set -g mouse on
 
 set -g status-position bottom
-
+run '~/.tmux/plugins/tpm/tpm'
